<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUser"
    android:background="@drawable/ic_background2">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editLogin"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:textColorHint="@android:color/black"
        android:alpha="0.3"
        android:background="@drawable/edtshapewhite"
        android:gravity="center"
        android:layout_gravity="center"
        android:inputType="text"
        android:hint="@string/login"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColorHint="@android:color/black"
        android:alpha="0.3"
        android:background="@drawable/edtshapewhite"
        android:gravity="center"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/editPassword2"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColorHint="@android:color/black"
        android:alpha="0.3"
        android:background="@drawable/edtshapewhite"
        android:gravity="center"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/password2"/>

    <EditText
        android:id="@+id/editMail"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColorHint="@android:color/black"
        android:alpha="0.3"
        android:background="@drawable/edtshapewhite"
        android:gravity="center"
        android:layout_gravity="center"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <Button
        android:textColor="#FFFFFF"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:background="@drawable/btnshapewhite"
        android:text="@string/next"
        android:onClick="nextUserLayout"/>

</LinearLayout>
    </FrameLayout>