<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

        <EditText
            android:id="@+id/editLogin"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:textColorHint="@android:color/black"
            android:alpha="0.2"
            android:background="@drawable/edtshapewhite"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/login"
            android:inputType="text" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@android:color/black"
        android:alpha="0.2"
        android:background="@drawable/edtshapewhite"
        android:gravity="center"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:textColor="#FFFFFF"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:onClick="userConnection"
        android:text="@string/connect"
        android:background="@drawable/btnshapewhite" />

    <Button
        android:textColor="#FFD7A3"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:text="@string/new_user"
        android:onClick="newUser"
        android:background="@drawable/btnshapeyellow"/>

</LinearLayout>
</LinearLayout>